--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,163 @@ body {
 .search__icon:hover {
   fill: #01BCB5;
 }
+
+.main {
+  display: grid;
+  grid-template-rows: 2.4fr 1fr 3fr;
+  grid-template-columns: 2fr 1fr 1.5fr 1.5fr;
+  grid-template-areas: "slider1 helthy thirsty thirsty" "slider1 helthy slider2 orange" "freshy helthy slider2 orange";
+}
+
+.slider1 {
+  grid-area: slider1;
+  position: relative;
+}
+.slider1__imgItem {
+  width: 100%;
+  height: 100%;
+}
+.slider1__nav {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+.slider1__arrow {
+  padding: 15px 11px 15px 19px;
+  border: 1px solid white;
+  border-radius: 50%;
+}
+.slider1__arrow:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+.slider1__btn {
+  padding: 10px 20px;
+  font-style: 16px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: white;
+  border: 2px solid white;
+  margin: 0 120px;
+}
+.btn:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+.slider2 {
+  grid-area: slider2;
+  position: relative;
+}
+.slider2__btn {
+  padding: 10px 20px;
+  font-style: 16px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: white;
+  border: 2px solid white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.slider2__dots {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  transform: translateX(-50%);
+}
+.slider2__dot {
+  width: 12px;
+  height: 12px;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 50%;
+}
+.slider2__dot--active {
+  background-color: transparent;
+}
+
+/* FRESHY */
+.freshy {
+  grid-area: freshy;
+  background-color: #C4E86C;
+}
+.freshy__title {
+  max-width: 140px;
+}
+.articleCommon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding: 30px;
+  color: white;
+}
+
+.title {
+  font-size: 24px;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 300;
+  line-height: 1;
+}
+.title span {
+  display: block;
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 2px;
+}
+.title span::first-line {
+  font-weight: 900;
+}
+
+.description {
+  max-width: 60%;
+}
+.description__text {
+  font-size: 18px;
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+}
+
+/* HELTHY */
+.healthy {
+  grid-area: helthy;
+  background-color: #FF4747;
+  text-align: left;
+}
+.healthy__title {
+  max-width: 184px;
+}
+.healthy__desc {
+  max-width: 184px;
+}
+
+.articleCommon--vertical {
+  flex-direction: column-reverse;
+  justify-content: flex-start;
+}
+
+/* THIRSTY */
+.thirsty {
+  grid-area: thirsty;
+  background-color: #FFB548;
+}
+.thirsty__title {
+  max-width: 200px;
+}
+.thirsty__desc {
+  max-width: 289px;
+  text-align: right;
+}
+
+.articleCommon--reverse {
+  flex-direction: row-reverse;
+}
